# timpal-testnet

./: .dockerignore  .gitignore  DOCKER_QUICKSTART.md  Dockerfile  JOIN_TESTNET.md  LICENSE  MACOS_README.md  PURE_PYTHON_MIGRATION.md  README.md  RUNNING_A_NODE.md  TESTNET_CROSS_PLATFORM_GUIDE.md  TESTNET_README.md  TESTNET_USAGE.md  TIMPAL_INVARIANTS.md  TOKENOMICS.md  VALIDATOR_GUIDE.md  WALLET_GUIDE.md  WALLET_SECURITY.md  WHITEPAPER.md  generate_canonical_genesis.py  generate_new_genesis_v2.py  pyproject.toml  requirements.txt  run_mainnet_node.py  run_testnet_node.py  start_explorer.py  validator_cli.py  wallet_cli.py  wallet_cli_v2.py
.github/workflows/: ci.yml
app/: attestation.py  block.py  config.py  config_testnet.py  consensus.py  crypto_utils.py  device_fingerprint.py  explorer.py  explorer_assets.py  finality.py  fork_choice.py  historical_state.py  key_storage.py  ledger.py  mempool.py  metawallet.py  node.py  p2p.py  p2p_security.py  recovery.py  rewards.py  seed_wallet.py  sqlite_historical_storage.py  storage_basic.py  testnet_patch.py  time_slots.py  transaction.py  validator_economics.py  vrf.py  wallet.py  wallet_loader.py
