[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "ecdsa>=0.19.1",
    "fastapi>=0.120.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "websockets>=15.0.1",
]
